--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https:/ChiangArt.github.io/To-Do-New",
+  "homepage": "https://ChiangArt.github.io/To-Do-New",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
